Add new project food

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>WELCOME TO MY WEBSITE</h1>
-        <p>XIN CHAO CAC BAN</p>
+        <p>DAY LA CV CUA EM: https://vietcv.io/cvs/71429c80-37cb-4a74-89fe-93d869eb3314</p>
     </div>
 
 </body>
